# mswpr

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conanfile.txt  main.cpp  pyproject.toml
.github/actions/configure_common_environment/: action.yml
.github/actions/run_cmake/: action.yml
.github/actions/select_preset_name/: action.yml
.github/actions/setup_conan/: action.yml
.github/workflows/: build.yml  coverage.yml  release.yml  static_analysis.yml
assets/do_not_ship/icons/: app.rc.in
assets/icons/: app.rc  app.rc.in
assets/ship/: Info.plist  Info.plist.in  mswpr.desktop  mswpr.desktop.in  mswpr.icns
cmake/: CodeCoverage.cmake  FindSDL2_image.cmake  Sanitizers.cmake  StyleChecker.cmake  conan_provider.cmake  cpplint.cmake  lto_support.cmake  static_analyzers.cmake
include/: game.hpp  game_config.hpp  game_engine.hpp  minefield.hpp  sdl_helper.hpp  texture_manager.hpp  types.hpp
include/core/: adjacent_cells_iterator.hpp  cell.hpp  cell_grid.hpp  debug_utils.hpp  fwd.hpp  game_config.hpp  game_timer.hpp  minefield.hpp  mines_counter.hpp  mines_generator.hpp  types.hpp
include/core/states/: ending_state.hpp  generating_state.hpp  playing_state.hpp  state_interface.hpp  state_machine.hpp
include/gui/: border_renderer.hpp  fwd.hpp  game_engine.hpp  game_renderer.hpp  game_timer_renderer.hpp  game_version.hpp  logger.hpp  menu_bar_renderer.hpp  minefield_renderer.hpp  mines_counter_renderer.hpp  sdl_helper.hpp  texture_manager.hpp
include/states/: ending_state.hpp  generating_state.hpp  playing_state.hpp  state_interface.hpp  state_machine.hpp
src/: game.cpp  game_engine.cpp  main.cpp  minefield.cpp  sdl_helper.cpp  texture_manager.cpp
src/core/: CMakeLists.txt  adjacent_cells_iterator.cpp  cell.cpp  cell_grid.cpp  debug_utils.cpp  game_timer.cpp  minefield.cpp  mines_counter.cpp  mines_generator.cpp
src/core/states/: ending_state.cpp  generating_state.cpp  playing_state.cpp  state_interface.cpp  state_machine.cpp
src/gui/: CMakeLists.txt  border_renderer.cpp  game_engine.cpp  game_renderer.cpp  game_timer_renderer.cpp  game_version.cpp.in  logger.cpp  menu_bar_renderer.cpp  minefield_renderer.cpp  mines_counter_renderer.cpp  sdl_helper.cpp  texture_manager.cpp
src/states/: ending_state.cpp  generating_state.cpp  playing_state.cpp  state_interface.cpp  state_machine.cpp
src/test/: CMakeLists.txt  test_another.cpp  test_minefield.cpp  test_minefield_cells_reveal.cpp  test_state_machine.cpp
tests/: CMakeLists.txt  test_adjacent_cells_iterator.cpp  test_cell.cpp  test_debug_utils.cpp  test_game_timer.cpp  test_minefield.cpp  test_minefield_cells_reveal.cpp  test_mines_counter.cpp  test_mines_generator.cpp  test_state_machine.cpp
tests/test_utils/: mocked_mines_generator.cpp  mocked_mines_generator.hpp
